Replaced the obsoleted Integer constructor.